feat: update content using my CV

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import siteData from "../data/site.json";
 
 const navLinks = [
     { href: "/", label: "Home" },
-    { href: "/projects", label: "Projects" },
+    { href: "/works", label: "Projects" },
     { href: "/blog", label: "Blog" },
     { href: "/about", label: "About" },
 ];
